# broCoDDE

./: .env.example  .gitignore  README.md  docker-compose.yml  initialproposa.md  start.sh
backend/: brocodde.db  pyproject.toml
backend/app/: config.py  logger.py  main.py
backend/app/agents/: analyst.py  base.py  content_discovery_toolkit.py  db.py  feynman.py  harness.py  interviewer.py  knowledge.py  registry.py  shaper.py  strategist.py  tools.py
backend/app/db/: database.py  models.py  seed.py
backend/app/memory/: models.py  store.py
backend/app/models/: router.py
backend/app/routes/: chat.py  concepts.py  discovery.py  memory.py  metrics.py  series.py  skills.py  tasks.py  voice.py
backend/app/skills/agno-architecture/: SKILL.md
backend/app/skills/audience-psychology/: SKILL.md
backend/app/skills/communication-bridge/: SKILL.md
backend/app/skills/content-discovery/: SKILL.md
backend/app/skills/content-extraction/: SKILL.md
backend/app/skills/content-structuring/: SKILL.md
backend/app/skills/content-vetting/: SKILL.md
backend/app/skills/framework-library/: SKILL.md
backend/app/skills/grammar-style/: SKILL.md
backend/app/skills/platform-linkedin/: SKILL.md
backend/app/skills/platform-twitter/: SKILL.md
backend/app/skills/series-management/: SKILL.md
backend/app/skills/visual-explanation/: SKILL.md
backend/backups/: brocodde.20260301.bak.db
backend/tests/: test_comprehensive.py  test_integrations.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  sse.ts  (+1 more)
(+12 files in other folders)
